updated answer btns layout with my own in purpose on better positioning

--- a/index.html
+++ b/index.html
@@ -74,16 +74,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg text-nowrap answer-btn">The Pacific Ocean</button>
-          <button class="btn btn-primary btn-lg text-nowrap answer-btn">The Indian Ocean</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">The Pacific Ocean</button>
+          <button class="answer-btn">The Indian Ocean</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">The Atlantic Ocean</button>
-          <button class="btn btn-primary btn-lg answer-btn">The Arctic Ocean</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">The Atlantic Ocean</button>
+          <button class="answer-btn">The Arctic Ocean</button>
           </div>
           </div>
           <div class="row">
@@ -103,23 +101,20 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">What are the two main metals in the earth’s core?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Silver and Gold</button>
-          <button class="btn btn-primary btn-lg answer-btn">Iron and Nickel</button>
-          </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Titanium and Aluminium</button>
-          <button class="btn btn-primary btn-lg answer-btn">Cobalt and Iron</button>
-          </div>
-          </div>
           <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Silver and Gold</button>
+          <button class="answer-btn">Iron and Nickel</button>
+          </div>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Titanium and Aluminium</button>
+          <button class="answer-btn">Cobalt and Iron</button>
+          </div>
+          </div>
             <div class="col-12 text-center">
             <button class="btn btn-primary">Submit</button>
             </div>
-          </div>
+            </div>
           </div>
         </div>
       </div>
@@ -132,16 +127,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">Which of the following is NOT considered a continent?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Antarctica</button>
-          <button class="btn btn-primary btn-lg answer-btn">Australia</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Antarctica</button>
+          <button class="answer-btn">Australia</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Europe</button>
-          <button class="btn btn-primary btn-lg answer-btn">Caribbean</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Europe</button>
+          <button class="answer-btn">Caribbean</button>
           </div>
           </div>
           <div class="row">
@@ -161,16 +154,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the deepest location in the world’s oceans?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Tonga Trench</button>
-          <button class="btn btn-primary btn-lg answer-btn">Philippine Trench</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Tonga Trench</button>
+          <button class="answer-btn">Philippine Trench</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Mariana Trench</button>
-          <button class="btn btn-primary btn-lg answer-btn">Puerto Rico Trench</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Mariana Trench</button>
+          <button class="answer-btn">Puerto Rico Trench</button>
           </div>
           </div>
           <div class="row">
@@ -190,16 +181,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">Outside of Antarctica, what is the largest desert in the world?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Arabian Desert</button>
-          <button class="btn btn-primary btn-lg answer-btn">Sahara Desert</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Arabian Desert</button>
+          <button class="answer-btn">Sahara Desert</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Gobi Desert</button>
-          <button class="btn btn-primary btn-lg answer-btn">Kalahari Desert</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Gobi Desert</button>
+          <button class="answer-btn">Kalahari Desert</button>
           </div>
           </div>
           <div class="row">
@@ -219,16 +208,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">The gemstone ruby is typically what color?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">White</button>
-          <button class="btn btn-primary btn-lg answer-btn">Yellow</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">White</button>
+          <button class="answer-btn">Yellow</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Blue</button>
-          <button class="btn btn-primary btn-lg answer-btn">Red</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Blue</button>
+          <button class="answer-btn">Red</button>
           </div>
           </div>
           <div class="row">
@@ -248,16 +235,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the highest mountain on earth?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Mount Everest</button>
-          <button class="btn btn-primary btn-lg answer-btn">K2</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Mount Everest</button>
+          <button class="answer-btn">K2</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Makalu</button>
-          <button class="btn btn-primary btn-lg answer-btn">Cho Oyu</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Makalu</button>
+          <button class="answer-btn">Cho Oyu</button>
           </div>
           </div>
           <div class="row">
@@ -277,16 +262,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">The mass of the earth is made up mostly of which two elements?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Copper and Iron</button>
-          <button class="btn btn-primary btn-lg answer-btn">Oxygen and Hydrogen</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Copper and Iron</button>
+          <button class="answer-btn">Oxygen and Hydrogen</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Iron and Oxygen</button>
-          <button class="btn btn-primary btn-lg answer-btn">Iron and Lead</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Iron and Oxygen</button>
+          <button class="answer-btn">Iron and Lead</button>
           </div>
           </div>
           <div class="row">
@@ -306,16 +289,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the second most common gas found in the air we breathe?</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Helium</button>
-          <button class="btn btn-primary btn-lg answer-btn">Oxygen</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Helium</button>
+          <button class="answer-btn">Oxygen</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Sulfur</button>
-          <button class="btn btn-primary btn-lg answer-btn">Krypton</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Sulfur</button>
+          <button class="answer-btn">Krypton</button>
           </div>
           </div>
           <div class="row">
@@ -335,16 +316,14 @@
         <img src="" class="card-img-top" alt="" />
         <div class="card-body">
           <h5 class="card-title text-center">The world's longest river is:</h5>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Nile</button>
-          <button class="btn btn-primary btn-lg answer-btn">Amazon River</button>
+          <div class="row">
+          <div class="col-6 text-center">
+          <button class="answer-btn">Nile</button>
+          <button class="answer-btn">Amazon River</button>
           </div>
-          </div>
-          <div class="row justify-content-around">
-          <div class="col-12 text-center">
-          <button class="btn btn-primary btn-lg answer-btn">Congo River</button>
-          <button class="btn btn-primary btn-lg answer-btn">Niger</button>
+          <div class="col-6 text-center">
+          <button class="answer-btn">Congo River</button>
+          <button class="answer-btn">Niger</button>
           </div>
           </div>
           <div class="row">
