added quiz images

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <div class="container">
     <div class="question" id="question-1">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean" />
+        <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
         <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
           <div class="row">
           <div class="col-6 text-center">
           <button class="answer-btn">The Pacific Ocean</button>
@@ -98,7 +98,7 @@
       <div class="container">
     <div class="question" id="question-2">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/metals.jpg" class="card-img-top" alt="Earth Metals" />
         <div class="card-body">
           <h5 class="card-title text-center">What are the two main metals in the earth’s core?</h5>
           <div class="row">
@@ -107,7 +107,7 @@
           <button class="answer-btn">Iron and Nickel</button>
           </div>
           <div class="col-6 text-center">
-          <button class="answer-btn">Titanium and Aluminium</button>
+          <button class="answer-btn">Titanium and Gold</button>
           <button class="answer-btn">Cobalt and Iron</button>
           </div>
           </div>
@@ -118,13 +118,12 @@
           </div>
         </div>
       </div>
-      </div>
       <!--/QUESTION 2-->
       <!--QUESTION 3-->
       <div class="container">
     <div class="question" id="question-3">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/continents.jpg" class="card-img-top" alt="World map with continents" />
         <div class="card-body">
           <h5 class="card-title text-center">Which of the following is NOT considered a continent?</h5>
           <div class="row">
@@ -151,7 +150,7 @@
       <div class="container">
     <div class="question" id="question-4">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/Mariana_Trench.jpg" class="card-img-top" alt="Deepest location in world's ocean" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the deepest location in the world’s oceans?</h5>
           <div class="row">
@@ -178,7 +177,7 @@
       <div class="container">
     <div class="question" id="question-5">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/desert.jpg" class="card-img-top" alt="Largest desert in the world" />
         <div class="card-body">
           <h5 class="card-title text-center">Outside of Antarctica, what is the largest desert in the world?</h5>
           <div class="row">
@@ -205,7 +204,7 @@
       <div class="container">
     <div class="question" id="question-6">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/gemstone.jpg" class="card-img-top" alt="Gemstone" />
         <div class="card-body">
           <h5 class="card-title text-center">The gemstone ruby is typically what color?</h5>
           <div class="row">
@@ -232,7 +231,7 @@
       <div class="container">
     <div class="question" id="question-7">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/mountain.jpg" class="card-img-top" alt="Highest mountain on earth" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the highest mountain on earth?</h5>
           <div class="row">
@@ -259,13 +258,13 @@
       <div class="container">
     <div class="question" id="question-8">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/periodic_table.jpg" class="card-img-top" alt="Periodic table" />
         <div class="card-body">
           <h5 class="card-title text-center">The mass of the earth is made up mostly of which two elements?</h5>
           <div class="row">
           <div class="col-6 text-center">
           <button class="answer-btn">Copper and Iron</button>
-          <button class="answer-btn">Oxygen and Hydrogen</button>
+          <button class="answer-btn">Oxygen and Lead</button>
           </div>
           <div class="col-6 text-center">
           <button class="answer-btn">Iron and Oxygen</button>
@@ -286,7 +285,7 @@
       <div class="container">
     <div class="question" id="question-9">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/oxygen.jpg" class="card-img-top" alt="Oxygen tanks" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the second most common gas found in the air we breathe?</h5>
           <div class="row">
@@ -313,7 +312,7 @@
       <div class="container">
     <div class="question" id="question-10">
       <div class="card">
-        <img src="" class="card-img-top" alt="" />
+        <img src="assets/images/river.jpg" class="card-img-top" alt="Longest river in the world" />
         <div class="card-body">
           <h5 class="card-title text-center">The world's longest river is:</h5>
           <div class="row">
