--- a/index.html
+++ b/index.html
@@ -69,24 +69,29 @@
     <!--QUESTION 1-->
     <div class="quiz-questions" id="quiz-questions">
     <div class="container">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-1">
       <div class="card">
         <img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean" />
         <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
         <div class="card-body">
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">The Pacific Ocean</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">The Indian Ocean</button>
           </div>
-          <div class="col-6 text-center">
-          <button class="answer-btn">The Atlantic Ocean</button>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
+          <button class="answer-btn">The Black Sea</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">The Arctic Ocean</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -96,23 +101,28 @@
       <!--/QUESTION 1-->
       <!--QUESTION 2-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-2">
       <div class="card">
         <img src="assets/images/metals.jpg" class="card-img-top" alt="Earth Metals" />
         <div class="card-body">
-          <h5 class="card-title text-center">What are the two main metals in the earth’s core?</h5>
+          <h5 class="card-title text-center mb-4">What are the two main metals in the earth’s core?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Silver and Gold</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Iron and Nickel</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Titanium and Gold</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Cobalt and Iron</button>
           </div>
           </div>
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
             </div>
           </div>
@@ -121,24 +131,29 @@
       <!--/QUESTION 2-->
       <!--QUESTION 3-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-3">
       <div class="card">
         <img src="assets/images/continents.jpg" class="card-img-top" alt="World map with continents" />
         <div class="card-body">
           <h5 class="card-title text-center">Which of the following is NOT considered a continent?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Antarctica</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Australia</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Europe</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Caribbean</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -148,24 +163,29 @@
       <!--/QUESTION 3-->
       <!--QUESTION 4-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-4">
       <div class="card">
         <img src="assets/images/Mariana_Trench.jpg" class="card-img-top" alt="Deepest location in world's ocean" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the deepest location in the world’s oceans?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Tonga Trench</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Philippine Trench</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Mariana Trench</button>
-          <button class="answer-btn">Puerto Rico Trench</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
+          <button class="answer-btn">Japan Trench</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -175,24 +195,29 @@
       <!--/QUESTION 4-->
       <!--QUESTION 5-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-5">
       <div class="card">
         <img src="assets/images/desert.jpg" class="card-img-top" alt="Largest desert in the world" />
         <div class="card-body">
           <h5 class="card-title text-center">Outside of Antarctica, what is the largest desert in the world?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Arabian Desert</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Sahara Desert</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Gobi Desert</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Kalahari Desert</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -202,24 +227,29 @@
       <!--/QUESTION 5-->
       <!--QUESTION 6-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-6">
       <div class="card">
         <img src="assets/images/gemstone.jpg" class="card-img-top" alt="Gemstone" />
         <div class="card-body">
           <h5 class="card-title text-center">The gemstone ruby is typically what color?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">White</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Yellow</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Blue</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Red</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -229,24 +259,29 @@
       <!--/QUESTION 6-->
       <!--QUESTION 7-->  
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-7">
       <div class="card">
         <img src="assets/images/mountain.jpg" class="card-img-top" alt="Highest mountain on earth" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the highest mountain on earth?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Mount Everest</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">K2</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Makalu</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Cho Oyu</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -255,18 +290,20 @@
       </div>
       <!--/QUESTION 7-->
       <!--QUESTION 8-->
+      <!--GOOGLE MAPS API QUESTION-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-8">
       <div class="card">
         <img src="assets/images/periodic_table.jpg" class="card-img-top" alt="Periodic table" />
         <div class="card-body">
           <h5 class="card-title text-center">The mass of the earth is made up mostly of which two elements?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-6 col-xs-12 text-center">
           <button class="answer-btn">Copper and Iron</button>
           <button class="answer-btn">Oxygen and Lead</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-6 col-xs-12 text-center">
           <button class="answer-btn">Iron and Oxygen</button>
           <button class="answer-btn">Iron and Lead</button>
           </div>
@@ -280,27 +317,33 @@
         </div>
       </div>
       </div>
+      <!--GOOGLE MAPS API QUESTION-->
       <!--/QUESTION 8-->
       <!--QUESTION 9-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-9">
       <div class="card">
         <img src="assets/images/oxygen.jpg" class="card-img-top" alt="Oxygen tanks" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the second most common gas found in the air we breathe?</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Helium</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Oxygen</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Sulfur</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Krypton</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -310,24 +353,29 @@
       <!--/QUESTION 9-->
       <!--QUESTION 10-->
       <div class="container">
+      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-10">
       <div class="card">
         <img src="assets/images/river.jpg" class="card-img-top" alt="Longest river in the world" />
         <div class="card-body">
           <h5 class="card-title text-center">The world's longest river is:</h5>
           <div class="row">
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Nile</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Amazon River</button>
           </div>
-          <div class="col-6 text-center">
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Congo River</button>
+          </div>
+          <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn">Niger</button>
           </div>
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary">Score</button>
+            <button class="btn btn-primary mt-3">Score</button>
             </div>
           </div>
           </div>
