--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -122,7 +122,7 @@
           </div>
           </div>
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -185,7 +185,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -217,7 +217,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -249,7 +249,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -281,7 +281,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -343,7 +343,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Submit</button>
             </div>
           </div>
           </div>
@@ -375,7 +375,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary mt-3">Score</button>
+            <button class="btn btn-primary btn-lg mt-3">Score</button>
             </div>
           </div>
           </div>
