added jquery library and created script.js file

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
   </head>
   <body>
     <header>
@@ -73,7 +68,7 @@
     <div class="question" id="question-1">
       <div class="card">
         <img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean" />
-        <h5 class="card-title text-center">What is the name of the largest ocean on earth?</h5>
+        <h5 class="card-title text-center mt-3">What is the name of the largest ocean on earth?</h5>
         <div class="card-body">
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
@@ -384,5 +379,10 @@
       </div>
       <!--/QUESTION 10-->
     </div>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
+    <script src="assets/js/jquery-3.5.1.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
