added cursor pointer to answer btns and removed focus once clicked

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </h3>
     </header>
     <!--LANDING PAGE-->
-    <div class="container decoration text-center">
+    <div class="container decoration text-center" id="landing-page">
       <h4 class="mt-5">Few facts about Earth</h4>
       <ul>
         <li class="mt-5">
@@ -53,7 +53,7 @@
       </ul>
 
       <h3 class="mt-5">Test your knowledge by taking this short quiz.</h3>
-      <button type="button" class="btn btn-warning btn-lg mt-5">
+      <button type="button" class="btn btn-warning btn-lg mt-5" id="start-button">
         Start Quiz!
       </button>
     </div>
@@ -64,24 +64,24 @@
     <!--QUESTION 1-->
     <div class="quiz-questions" id="quiz-questions">
     <div class="container">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-1">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean" />
         <h5 class="card-title text-center mt-3">What is the name of the largest ocean on earth?</h5>
         <div class="card-body">
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">The Pacific Ocean</button>
+          <button class="answer-btn">1. The Pacific Ocean</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">The Indian Ocean</button>
+          <button class="answer-btn">2. The Indian Ocean</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">The Black Sea</button>
+          <button class="answer-btn">3. The Black Sea</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">The Arctic Ocean</button>
+          <button class="answer-btn">4. The Arctic Ocean</button>
           </div>
           </div>
           <div class="row">
@@ -96,24 +96,24 @@
       <!--/QUESTION 1-->
       <!--QUESTION 2-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-2">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/metals.jpg" class="card-img-top" alt="Earth Metals" />
         <div class="card-body">
           <h5 class="card-title text-center mb-4">What are the two main metals in the earth’s core?</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Silver and Gold</button>
+          <button class="answer-btn">1. Silver and Gold</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Iron and Nickel</button>
+          <button class="answer-btn">2. Iron and Nickel</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Titanium and Gold</button>
+          <button class="answer-btn">3. Titanium and Gold</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Cobalt and Iron</button>
+          <button class="answer-btn">4. Cobalt and Iron</button>
           </div>
           </div>
             <div class="col-12 text-center">
@@ -126,24 +126,24 @@
       <!--/QUESTION 2-->
       <!--QUESTION 3-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-3">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/continents.jpg" class="card-img-top" alt="World map with continents" />
         <div class="card-body">
           <h5 class="card-title text-center">Which of the following is NOT considered a continent?</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Antarctica</button>
+          <button class="answer-btn">1. Antarctica</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Australia</button>
+          <button class="answer-btn">2. Australia</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Europe</button>
+          <button class="answer-btn">3. Europe</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Caribbean</button>
+          <button class="answer-btn">4. Caribbean</button>
           </div>
           </div>
           <div class="row">
@@ -158,24 +158,24 @@
       <!--/QUESTION 3-->
       <!--QUESTION 4-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-4">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/Mariana_Trench.jpg" class="card-img-top" alt="Deepest location in world's ocean" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the deepest location in the world’s oceans?</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Tonga Trench</button>
+          <button class="answer-btn">1. Tonga Trench</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Philippine Trench</button>
+          <button class="answer-btn">2. Philippine Trench</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Mariana Trench</button>
+          <button class="answer-btn">3. Mariana Trench</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Japan Trench</button>
+          <button class="answer-btn">4. Japan Trench</button>
           </div>
           </div>
           <div class="row">
@@ -190,24 +190,24 @@
       <!--/QUESTION 4-->
       <!--QUESTION 5-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-5">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/desert.jpg" class="card-img-top" alt="Largest desert in the world" />
         <div class="card-body">
           <h5 class="card-title text-center">Outside of Antarctica, what is the largest desert in the world?</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Arabian Desert</button>
+          <button class="answer-btn">1. Arabian Desert</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Sahara Desert</button>
+          <button class="answer-btn">2. Sahara Desert</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Gobi Desert</button>
+          <button class="answer-btn">3. Gobi Desert</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Kalahari Desert</button>
+          <button class="answer-btn">4. Kalahari Desert</button>
           </div>
           </div>
           <div class="row">
@@ -222,24 +222,24 @@
       <!--/QUESTION 5-->
       <!--QUESTION 6-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-6">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/gemstone.jpg" class="card-img-top" alt="Gemstone" />
         <div class="card-body">
           <h5 class="card-title text-center">The gemstone ruby is typically what color?</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">White</button>
+          <button class="answer-btn">1. White</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Yellow</button>
+          <button class="answer-btn">2. Yellow</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Blue</button>
+          <button class="answer-btn">3. Blue</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Red</button>
+          <button class="answer-btn">4. Red</button>
           </div>
           </div>
           <div class="row">
@@ -254,24 +254,24 @@
       <!--/QUESTION 6-->
       <!--QUESTION 7-->  
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-7">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/mountain.jpg" class="card-img-top" alt="Highest mountain on earth" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the name of the highest mountain on earth?</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Mount Everest</button>
+          <button class="answer-btn">1. Mount Everest</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">K2</button>
+          <button class="answer-btn">2. K2</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Makalu</button>
+          <button class="answer-btn">3. Makalu</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Cho Oyu</button>
+          <button class="answer-btn">4. Cho Oyu</button>
           </div>
           </div>
           <div class="row">
@@ -287,20 +287,20 @@
       <!--QUESTION 8-->
       <!--GOOGLE MAPS API QUESTION-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-8">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/periodic_table.jpg" class="card-img-top" alt="Periodic table" />
         <div class="card-body">
           <h5 class="card-title text-center">The mass of the earth is made up mostly of which two elements?</h5>
           <div class="row">
           <div class="col-6 col-xs-12 text-center">
-          <button class="answer-btn">Copper and Iron</button>
-          <button class="answer-btn">Oxygen and Lead</button>
+          <button class="answer-btn">1. Copper and Iron</button>
+          <button class="answer-btn">2. Oxygen and Lead</button>
           </div>
           <div class="col-6 col-xs-12 text-center">
-          <button class="answer-btn">Iron and Oxygen</button>
-          <button class="answer-btn">Iron and Lead</button>
+          <button class="answer-btn">3. Iron and Oxygen</button>
+          <button class="answer-btn">4. Iron and Lead</button>
           </div>
           </div>
           <div class="row">
@@ -316,24 +316,24 @@
       <!--/QUESTION 8-->
       <!--QUESTION 9-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-9">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/oxygen.jpg" class="card-img-top" alt="Oxygen tanks" />
         <div class="card-body">
           <h5 class="card-title text-center">What is the second most common gas found in the air we breathe?</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Helium</button>
+          <button class="answer-btn">1. Helium</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Oxygen</button>
+          <button class="answer-btn">2. Oxygen</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Sulfur</button>
+          <button class="answer-btn">3. Sulfur</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Krypton</button>
+          <button class="answer-btn">4. Krypton</button>
           </div>
           </div>
           <div class="row">
@@ -348,24 +348,24 @@
       <!--/QUESTION 9-->
       <!--QUESTION 10-->
       <div class="container">
-      <button type="button" class="btn btn-danger btn-lg">Quit</button>
     <div class="question" id="question-10">
-      <div class="card">
+    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+      <div class="card bg-light">
         <img src="assets/images/river.jpg" class="card-img-top" alt="Longest river in the world" />
         <div class="card-body">
           <h5 class="card-title text-center">The world's longest river is:</h5>
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Nile</button>
+          <button class="answer-btn">1. Nile</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Amazon River</button>
+          <button class="answer-btn">2. Amazon River</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Congo River</button>
+          <button class="answer-btn">3. Congo River</button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">Niger</button>
+          <button class="answer-btn">4. Niger</button>
           </div>
           </div>
           <div class="row">
@@ -379,10 +379,10 @@
       </div>
       <!--/QUESTION 10-->
     </div>
+    <script src="assets/js/jquery-3.5.1.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"></script>
-    <script src="assets/js/jquery-3.5.1.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
