--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
 
     <!--QUIZ QUESTIONS-->
 
-    <!--QUESTION 1-->
+    <!--QUESTION CONTAINER-->
     <div class="quiz-questions" id="quiz-questions">
     <div class="container">
-    <div class="question" id="question-1">
+    <div class="question" id="question">
     <button type="button" class="btn btn-danger btn-lg">Quit</button>
       <div class="card bg-light">
-        <img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean" />
-        <h5 class="card-title text-center mt-3">What is the name of the largest ocean on earth?</h5>
+        <!--<img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean"/>-->
+        <h5 class="card-title text-center mt-3">Question</h5>
         <div class="card-body">
           <div class="row">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. The Pacific Ocean</button>
+          <button class="answer-btn"></button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. The Indian Ocean</button>
+          <button class="answer-btn"></button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. The Black Sea</button>
+          <button class="answer-btn"></button>
           </div>
           <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. The Arctic Ocean</button>
+          <button class="answer-btn"></button>
           </div>
           </div>
           <div class="row">
@@ -93,291 +93,7 @@
         </div>
       </div>
       </div>
-      <!--/QUESTION 1-->
-      <!--QUESTION 2-->
-      <div class="container">
-    <div class="question" id="question-2">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/metals.jpg" class="card-img-top" alt="Earth Metals" />
-        <div class="card-body">
-          <h5 class="card-title text-center mb-4">What are the two main metals in the earth’s core?</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. Silver and Gold</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. Iron and Nickel</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Titanium and Gold</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Cobalt and Iron</button>
-          </div>
-          </div>
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
-            </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--/QUESTION 2-->
-      <!--QUESTION 3-->
-      <div class="container">
-    <div class="question" id="question-3">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/continents.jpg" class="card-img-top" alt="World map with continents" />
-        <div class="card-body">
-          <h5 class="card-title text-center">Which of the following is NOT considered a continent?</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. Antarctica</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. Australia</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Europe</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Caribbean</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--/QUESTION 3-->
-      <!--QUESTION 4-->
-      <div class="container">
-    <div class="question" id="question-4">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/Mariana_Trench.jpg" class="card-img-top" alt="Deepest location in world's ocean" />
-        <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the deepest location in the world’s oceans?</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. Tonga Trench</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. Philippine Trench</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Mariana Trench</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Japan Trench</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--/QUESTION 4-->
-      <!--QUESTION 5-->
-      <div class="container">
-    <div class="question" id="question-5">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/desert.jpg" class="card-img-top" alt="Largest desert in the world" />
-        <div class="card-body">
-          <h5 class="card-title text-center">Outside of Antarctica, what is the largest desert in the world?</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. Arabian Desert</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. Sahara Desert</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Gobi Desert</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Kalahari Desert</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--/QUESTION 5-->
-      <!--QUESTION 6-->
-      <div class="container">
-    <div class="question" id="question-6">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/gemstone.jpg" class="card-img-top" alt="Gemstone" />
-        <div class="card-body">
-          <h5 class="card-title text-center">The gemstone ruby is typically what color?</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. White</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. Yellow</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Blue</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Red</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--/QUESTION 6-->
-      <!--QUESTION 7-->  
-      <div class="container">
-    <div class="question" id="question-7">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/mountain.jpg" class="card-img-top" alt="Highest mountain on earth" />
-        <div class="card-body">
-          <h5 class="card-title text-center">What is the name of the highest mountain on earth?</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. Mount Everest</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. K2</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Makalu</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Cho Oyu</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--/QUESTION 7-->
-      <!--QUESTION 8-->
-      <!--GOOGLE MAPS API QUESTION-->
-      <div class="container">
-    <div class="question" id="question-8">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/periodic_table.jpg" class="card-img-top" alt="Periodic table" />
-        <div class="card-body">
-          <h5 class="card-title text-center">The mass of the earth is made up mostly of which two elements?</h5>
-          <div class="row">
-          <div class="col-6 col-xs-12 text-center">
-          <button class="answer-btn">1. Copper and Iron</button>
-          <button class="answer-btn">2. Oxygen and Lead</button>
-          </div>
-          <div class="col-6 col-xs-12 text-center">
-          <button class="answer-btn">3. Iron and Oxygen</button>
-          <button class="answer-btn">4. Iron and Lead</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary">Submit</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--GOOGLE MAPS API QUESTION-->
-      <!--/QUESTION 8-->
-      <!--QUESTION 9-->
-      <div class="container">
-    <div class="question" id="question-9">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/oxygen.jpg" class="card-img-top" alt="Oxygen tanks" />
-        <div class="card-body">
-          <h5 class="card-title text-center">What is the second most common gas found in the air we breathe?</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. Helium</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. Oxygen</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Sulfur</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Krypton</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--/QUESTION 9-->
-      <!--QUESTION 10-->
-      <div class="container">
-    <div class="question" id="question-10">
-    <button type="button" class="btn btn-danger btn-lg">Quit</button>
-      <div class="card bg-light">
-        <img src="assets/images/river.jpg" class="card-img-top" alt="Longest river in the world" />
-        <div class="card-body">
-          <h5 class="card-title text-center">The world's longest river is:</h5>
-          <div class="row">
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">1. Nile</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">2. Amazon River</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">3. Congo River</button>
-          </div>
-          <div class="col-sm-12 col-lg-6 text-center mt-3">
-          <button class="answer-btn">4. Niger</button>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Score</button>
-            </div>
-          </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <!--/QUESTION 10-->
+      <!--/QUESTION CONTAINER-->
     </div>
     <script src="assets/js/jquery-3.5.1.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
