added functions to display random questions and it's answers

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <button type="button" class="btn btn-danger btn-lg">Quit</button>
       <div class="card bg-light">
         <!--<img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean"/>-->
-        <h5 class="card-title text-center mt-3">Question</h5>
+        <div id="question-info"><h2 class="card-title text-center mt-3">Question</h2></div>
         <div class="card-body">
-          <div class="row">
+          <div class="row" id="answer-btns">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
           <button class="answer-btn"></button>
           </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Submit</button>
+            <button class="btn btn-primary btn-lg mt-3">Next</button>
             </div>
           </div>
           </div>
