fixed layout of buttons showing when questions and answers are  populated by adding bootstrap classes to button element

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <button type="button" class="btn btn-danger btn-lg">Quit</button>
       <div class="card bg-light">
         <!--<img src="assets/images/ocean.jpg" class="card-img-top" alt="Pacific Ocean"/>-->
-        <div id="question-info"><h2 class="card-title text-center mt-3">Question</h2></div>
+        <h4 class="card-title text-center mt-3" id="question-info">Question</h4>
         <div class="card-body">
           <div class="row" id="answer-btns">
           <div class="col-sm-12 col-lg-6 text-center mt-3">
@@ -86,7 +86,7 @@
           </div>
           <div class="row">
             <div class="col-12 text-center">
-            <button class="btn btn-primary btn-lg mt-3">Next</button>
+            <button class="btn btn-primary btn-lg mt-3" id="next-button">Next</button>
             </div>
           </div>
           </div>
