added correct and incorrect feedbacks depending on clicked answer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="question" id="question">
                     <button type="button" class="btn btn-danger btn-lg">Quit</button>
                     <div class="card bg-light">
-                            <img class="card-img-top" alt="Pacific Ocean" id="image"/>
+                            <img class="card-img-top" id="image"/>
                         <h4 class="card-title text-center mt-3" id="question-info">Question</h4>
                         <div class="card-body">
                             <div class="row" id="answer-btns">
@@ -78,6 +78,30 @@
                 </div>
             </div>
             <!--/QUESTION CONTAINER-->
+            <div class="container" id="correct-feedback">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-success" role="alert">
+                            <h4 class="alert-heading">Well done!</h4>
+                            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+                            <hr>
+                            <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <div class="container" id="incorrect-feedback">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-danger" role="alert">
+                            <h4 class="alert-heading">WRONG!</h4>
+                            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+                            <hr>
+                            <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="assets/js/jquery-3.5.1.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
