--- a/index.html
+++ b/index.html
@@ -78,14 +78,13 @@
                 </div>
             </div>
             <!--/QUESTION CONTAINER-->
+            <!--FEEDBACK-->
             <div class="container" id="correct-feedback">
                 <div class="row">
                     <div class="col-12">
                         <div class="alert alert-success" role="alert">
-                            <h4 class="alert-heading">Well done!</h4>
-                            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
-                            <hr>
-                            <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+                            <h4 class="alert-heading text-center">Well done!</h4>
+                            <p class="text-center">Click on <b>Next</b> button to check what else you know!</p>
                         </div>
                     </div>
                 </div>
@@ -94,14 +93,13 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="alert alert-danger" role="alert">
-                            <h4 class="alert-heading">WRONG!</h4>
-                            <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
-                            <hr>
-                            <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+                            <h4 class="alert-heading text-center">WRONG!</h4>
+                            <p class="text-center">Visit <a href="https://www.ourplanet.com/en/" target="_blank">Our Planet</a> to learn more about Earth! </p>
                         </div>
                     </div>
                 </div>
             </div>
+            <!--/FEEDBACK-->
         </div>
         <script src="assets/js/jquery-3.5.1.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
